--- a/pages/dash.html
+++ b/pages/dash.html
@@ -20,7 +20,22 @@
 
       <main>
         <div class="dash">
-            <div id="item"><h3>&#9829 Dashboard &#9829</h3></div>
+            <div id="item"><h3> Dashboard </h3></div>
+
+            <div  class="box">
+                <pre>Classes :-  </pre>
+                <a href="#" class="button-link">
+                    <button class="button"> click-me </button>
+                </a>
+            </div>
+
+            <div  class="box">
+                <pre>Assignments :-  </pre>
+                <a href="#" class="button-link">
+                    <button class="button"> click-me </button>
+                </a>
+            </div>
+
             <div  class="box">
                 <pre>Progress Report :-  </pre>
                 <a href="#" class="button-link">
@@ -39,16 +54,11 @@
                     <button class="button"> click-me </button>
                 </a>
             </div>
-            <div  class="box">
-                <pre>Assignments :-  </pre>
-                <a href="#" class="button-link"></a>
-                    <button class="button"> click-me </button>
-                </a>
-            </div>
+           
             <div  class="box">
                 <pre>to-do list :-  </pre>
-                <a href="#" class="button-link"></a>
-                    <button class="button"> click-me </button>
+                <a href="./todo.html" class="button-link">
+                    <button class="button">click-me</button>
                 </a>
             </div>
         </div>
