--- a/pages/detail.html
+++ b/pages/detail.html
@@ -49,12 +49,16 @@
                     <div id="div3"><label for="City">City</label>
                         <input type="text" placeholder="Enter your City"></div>
 
-                        
-                    <div id="div4"><label for="role">What is your role</label>
-                    <input type="text" placeholder="Enter your role"></div>
-
-                    <div id="div5"><label for="querry">How did you know about this Courses</label>
-                    <input type="text" placeholder="Enter your reference"></div>
+                        <div id="div4">
+                            <label for="Duration">Duration</label>
+                       <select name="Duration" id="Duration">
+                        <option value="3 Months">3 Months</option>
+                        <option value="6 Months">6 Months</option>
+                        <option value="9 Months">9 Months</option>
+                        <option value="12 Months">12 Months</option>
+                       </select> 
+                       </div>
+                    
 
                   <a href="./payment.html" class="button-link">
                     <button class="button">Submit</button>
