--- a/main.html
+++ b/main.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Trustmedix</title>
-    <link rel="stylesheet" href="./css/main.css">
+    <link rel="stylesheet" href="../css/main.css">
 </head>
 <body>
 
@@ -13,8 +13,8 @@
             <!-- <img src="logo.jpg" alt="logo" class="logo"> -->
             <h1 id="title">Trustmedix</h1>
             <a class="tags" href="#">Home</a>   
-            <a class="tags" href="./pages/aboutus.html">About us</a> 
-            <a class="tags" href="./pages/services.html">Services</a>        
+            <a class="tags" href="../pages/aboutus.html">About us</a> 
+            <a class="tags" href="../pages/services.html">Services</a>        
         </div>
   </header>
   
@@ -27,17 +27,18 @@
                 </div>
                 <div id="two">
                     <p>Password</p>
-                    <input type="text" placeholder="value" id="value2">
+                   <input type="text" placeholder="value" id="value2">
                 </div>
 
-                <a href="./pages/home.html" class="button-link">
+                <a href="../pages/home.html" class="button-link">
                     <button class="button">Sign-In</button>
                 </a>
-                
+                    
+                </button>
 
                 <div class="four">
-                    <a href="./pages/forgot.html">Forgot Password</a>
-                    <a href="./pages/signup.html">Sign up</a>
+                    <a href="../pages/forgot.html">Forgot Password</a>
+                    <a href="../pages/signup.html">Sign up</a>
                 </div>
             </div>
         </div>
@@ -49,6 +50,7 @@
         </div>
     </footer>
 
-  <!-- <script src="login.js"></script> -->
+  <script src="../scripts/main.js"></script>
+</body>
 
 </html>
