--- a/pages/payment.html
+++ b/pages/payment.html
@@ -49,13 +49,16 @@
                     <div id="cvv">
                         <label for="cvv">CVV</label>
                         <input type="number=3">
-                        <button id="butt">Pay Now</button>
+                        <a href="dash.html" class="button-link">
+                            <button class="button">Pay Now</button>
+                        </a>
                     </div>
                 </div>
 
 
             </div>
         </main>
-  </header>  
+        <script src="../scripts/payment.js"></script>
+    
 </body>
 </html>
